# RACE

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  GAP_patch.sh  LICENSE  README.md  bitbucket-pipelines.yml  ci-sc-dlr.sh  race-config.cmake.in
examples/: CMakeLists.txt  Makefile  README.md  densemat.c  kernels.c  main.c  mmio.c  parse.c  race_example-config.cmake.in  sparsemat.c  timing.h
examples/cmake/: OptimizeForArchitecture.cmake
examples/diss_scripts/: calc_alpha.sh  calc_alpha_config.txt  convert_config_gs_to_symm.sh  gs.batch  gs.batch.template  gs.sh  gs_ABMC.batch  gs_MC.batch  gs_RACE.batch  gs_SERIAL.batch  gs_SERIAL.sh  gs_config.txt  gs_config_ABMC.txt  gs_config_MC.txt  gs_config_RACE.txt  gs_config_SERIAL.txt  gs_convergence_study.sh  gs_old.sh  gs_serial.sh  gs_serial_config.txt  kacz.batch  kacz.batch.template  kacz.sh  kacz_ABMC.batch  kacz_MC.batch  kacz_RACE.batch  kacz_SERIAL.batch  kacz_SERIAL.sh  kacz_config.txt  kacz_config_ABMC.txt  kacz_config_MC.txt  kacz_config_RACE.txt  kacz_config_SERIAL.txt  kacz_convergence.batch.template  kacz_convergence_ABMC.batch  kacz_convergence_MC.batch  kacz_convergence_RACE.batch  kacz_convergence_SERIAL.batch  kacz_convergence_config_ABMC.txt  kacz_convergence_config_MC.txt  (+41 more)
examples/diss_scripts/kacz_convergence_results/: ABMC.csv  MC.csv  RACE.csv  SERIAL.csv
examples/diss_scripts/kacz_convergence_results/align/: ABMC.csv  MC.csv  RACE.csv  SERIAL.csv
examples/diss_scripts/kacz_convergence_results/kacz_best_parameters/: ABMC.csv  MC.csv  RACE.csv  SERIAL.csv
examples/include/: avx_intrinsics.h  config_eg.h.in  densemat.h  generator.h  kacz_kernels.h  kernels.h  multicoloring.h  parse.h  quantile.hpp  sparsemat.h  timer.h
examples/matrixPower_perf_test/: config.txt  extract_matDetails.sh  machine-state.sh  perf_script.sh  perf_script_scan_template.sh  perf_script_template.sh  perf_script_w_likwid.sh
examples/matrixPower_perf_test/10_Aug_2020_kabywoody_results/: machine-state.txt  mtxPower.csv  tradPower.csv
examples/matrixPower_perf_test/10_Aug_2020_kabywoody_results/raw_mtxPower/: Anderson-16.5.mtx.txt  Emilia_923.mtx.txt  F1.mtx.txt  Fault_639.mtx.txt  Flan_1565.mtx.txt  FreeBosonChain-18.mtx.txt  G3_circuit.mtx.txt  Geo_1438.mtx.txt  HPCG-128-128-128.mtx.txt  Hook_1498.mtx.txt  Hubbard-12.mtx.txt  Serena.mtx.txt  audikw_1.mtx.txt  bmw7st_1.mtx.txt  bone010.mtx.txt  cant.mtx.txt  cfd2.mtx.txt  crankseg_1.mtx.txt  dielFilterV3real.mtx.txt  gearbox.mtx.txt  gsm_106857.mtx.txt  inline_1.mtx.txt  nlpkkt120.mtx.txt  offshore.mtx.txt  pwtk.mtx.txt  ship_003.mtx.txt  shipsec1.mtx.txt  xenon2.mtx.txt
examples/matrixPower_perf_test/10_Aug_2020_kabywoody_results/raw_tradPower/: Anderson-16.5.mtx.txt  Emilia_923.mtx.txt  F1.mtx.txt  Fault_639.mtx.txt  Flan_1565.mtx.txt  FreeBosonChain-18.mtx.txt  G3_circuit.mtx.txt  Geo_1438.mtx.txt  HPCG-128-128-128.mtx.txt  Hook_1498.mtx.txt  Hubbard-12.mtx.txt  Serena.mtx.txt  audikw_1.mtx.txt  bmw7st_1.mtx.txt  bone010.mtx.txt  cant.mtx.txt  cfd2.mtx.txt  crankseg_1.mtx.txt  dielFilterV3real.mtx.txt  gearbox.mtx.txt  gsm_106857.mtx.txt  inline_1.mtx.txt  mc2depi.mtx.txt  nlpkkt120.mtx.txt  offshore.mtx.txt  parabolic_fem.mtx.txt  pwtk.mtx.txt  ship_003.mtx.txt  shipsec1.mtx.txt  thermal2.mtx.txt  xenon2.mtx.txt
examples/matrixPower_perf_test/10_Feb_2021_cascalakesp2_snc_off_pm/: machine-state.txt  mtxPower.csv  tradPower.csv
examples/matrixPower_perf_test/10_Feb_2021_emmy_pm/: machine-state.txt  mtxPower.csv  tradPower.csv
examples/matrixPower_perf_test/14_Aug_2020_broadep2_cod_off_scaling/: machine-state.txt  mtxPower.csv  tradPower.csv
examples/matrixPower_perf_test/14_Aug_2020_casclakesp2_snc_off_scaling/: machine-state.txt  mtxPower.csv  tradPower.csv
examples/matrixPower_perf_test/19_April_2021_icl_snc_off/: mtxPower.csv  tradPower.csv
examples/matrixPower_perf_test/19_Jan_2021_casclakesp2_snc_off_caseStudy/: machine-state.txt  mtxPower.csv  tradPower.csv
examples/matrixPower_perf_test/19_Jan_2021_casclakesp2_snc_off_caseStudy_w_barrier/: machine-state.txt  mtxPower.csv  tradPower.csv
examples/matrixPower_perf_test/20_Jan_2021_casclakesp2_snc_off_scaling_Flan_pwtk/: mtxPower.csv  tradPower.csv
examples/matrixPower_perf_test/21_Jan_2021_casclakesp2_snc_off/: machine-state.txt  mtxPower.csv  tradPower.csv
examples/matrixPower_perf_test/21_Jan_2021_rome1_nps1/: machine-state.txt  mtxPower.csv  tradPower.csv
examples/matrixPower_perf_test/2_Nov_2020_casclakesp2_results_snc_off_recursion_pow2/: machine-state.txt  mtxPower.csv  tradPower.csv
examples/matrixPower_perf_test/4_Aug_2020_broadep2_results_cod_on/: tradPower.csv
examples/matrixPower_perf_test/4_Aug_2020_casclakesp2_results_snc_on/: machine-state.txt  mtxPower.csv
examples/matrixPower_perf_test/5_Aug_2020_broadep2_results_cod_off/: machine-state.txt  mtxPower.csv  tradPower.csv
examples/matrixPower_perf_test/5_Aug_2020_casclakesp2_results_snc_off/: machine-state.txt  mtxPower.csv  tradPower.csv
examples/matrixPower_perf_test/6_Aug_2020_broadep2_results_cod_off/: machine-state.txt  mtxPower.csv  tradPower.csv
examples/matrixPower_perf_test/6_Aug_2020_rome1_results_nps_4/: machine-state.txt  mtxPower.csv  tradPower.csv
examples/matrixPower_perf_test/broadep2_results/: machine-state.txt  mtxPower.csv
examples/matrixPower_perf_test/casclakesp2_results/: tradPower.csv
examples/src/: cgmn.cpp  colorGS.cpp  colorKACZ.cpp  colorSymmGS.cpp  colorSymmKACZ.cpp  colorSymmSpMV.cpp  coloring.cpp  main.cpp  mat_stat.cpp  matrixPower.cpp  matrixPowerBCSR.cpp  matrixPowerNuma.cpp  matrixPowerSplitting.cpp  matrixPower_highestPower.cpp  matrixPower_scan.cpp  mklIEPower.cpp  mklPower.cpp  mklSymmSpMV.cpp  param_study.cpp  race.cpp  serialGS.cpp  serialKACZ.cpp  serialSymmGS.cpp  serialSymmKACZ.cpp  sparsemat.cpp  spmv.cpp  tradPower.cpp  tradPowerNuma.cpp  tradPower_highestPower.cpp  tradPower_scan.cpp  trad_spmv_power.cpp
examples/src/helpers/: densemat.cpp  generator.cpp  kacz_kernels.cpp  kernels.cpp  mmio.cpp  multicoloring.cpp  parse.cpp  sparsemat.cpp
examples/src/tmpl/: kernels.cpp
(+1558 files in other folders)
